src/objects/LAC_Metric_Target__c.object
<CustomObject>
    <fields>
        <fullName>Date__c</fullName>
        <description>The Date that this target belongs to. This can be any date within the given quarter. We will calculate the quarter values. Only the first value within a given quarter will be considered (per user)</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <description>The Metric that this target belongs to</description>
        <label>Metric</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <description>The target value</description>
        <label>Value</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LAC Metric Target</label>
    <nameField>
        <label>Lac Metric Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAC Metric Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>